<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/surface">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:contentScrim="@color/primary"
            app:collapsedTitleTextColor="@android:color/white"
            app:expandedTitleTextColor="@android:color/white">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_header_height"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/ivCoverImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@android:drawable/ic_menu_gallery"
                    android:contentDescription="@string/place_photos" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:drawable/dark_header" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="@dimen/margin_medium"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnFavorite"
                        android:layout_width="@dimen/icon_button"
                        android:layout_height="@dimen/icon_button"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@android:drawable/btn_star_big_off"
                        android:contentDescription="@string/mark_favorite"
                        android:layout_marginEnd="@dimen/margin_small" />

                    <ImageButton
                        android:id="@+id/btnShare"
                        android:layout_width="@dimen/icon_button"
                        android:layout_height="@dimen/icon_button"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@android:drawable/ic_menu_share"
                        android:contentDescription="@string/share" />

                </LinearLayout>

            </FrameLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="?attr/homeAsUpIndicator"
                app:menu="@menu/detail_menu" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/surface"
            app:tabMode="fixed"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/accent"
            app:tabSelectedTextColor="@color/primary"
            app:tabTextColor="@color/text_secondary" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddMedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_menu_add"
        android:contentDescription="@string/add_photo"
        app:backgroundTint="@color/accent"
        app:tint="@android:color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
